--- a/cass/admin.html
+++ b/cass/admin.html
@@ -103,7 +103,7 @@
     <script>
         const ADMIN_PASSWORD = 'admin2026';
         const ACCESS_TOKEN = 'access-cassia-2026';
-        const BASE_URL = window.location.origin;
+        const BASE_URL = const BASE_URL = window.location.origin + '/meu-app/cass';
 
         function login(e) {
             e.preventDefault();
