--- a/cass/admin.html
+++ b/cass/admin.html
@@ -23,7 +23,7 @@
                 <h1 class="text-4xl font-bold gradient-text mb-2">Painel Admin</h1>
                 <p class="text-gray-600">Cassia Prompt</p>
             </div>
-            <form onsubmit="login(event)">
+            <form onsubmit="event.preventDefault(); login(event); return false;">
                 <div class="mb-6">
                     <label class="block text-sm font-semibold text-gray-700 mb-2">🔐 Senha de Administrador</label>
                     <input type="password" id="adminPass" required placeholder="••••••••" class="w-full px-4 py-3 rounded-xl border-2 focus:border-purple-500 focus:outline-none">
@@ -65,7 +65,7 @@
 
         <div class="glass rounded-2xl p-6">
             <h2 class="text-2xl font-bold gradient-text mb-6">🔗 Gerar Novo Link de Cliente</h2>
-            <form onsubmit="generateLink(event)" class="space-y-4">
+            <form onsubmit="event.preventDefault(); generateLink(event); return false;" class="space-y-4">
                 <div>
                     <label class="block text-sm font-semibold text-gray-700 mb-2">👤 Nome do Cliente</label>
                     <input type="text" id="clientName" required placeholder="Ex: João Silva" class="w-full px-4 py-3 rounded-xl border-2 focus:border-purple-500 focus:outline-none">
@@ -103,10 +103,10 @@
     <script>
         const ADMIN_PASSWORD = 'admin2026';
         const ACCESS_TOKEN = 'access-cassia-2026';
-        const BASE_URL = const BASE_URL = window.location.origin + '/meu-app/cass';
+        // CORREÇÃO AQUI: Caminho do GitHub corrigido
+        const BASE_URL = window.location.origin + '/meu-app/cass';
 
         function login(e) {
-            e.preventDefault();
             const pass = document.getElementById('adminPass').value;
             if (pass === ADMIN_PASSWORD) {
                 sessionStorage.setItem('admin_logged', 'true');
@@ -126,7 +126,6 @@
         }
 
         function generateLink(e) {
-            e.preventDefault();
             const name = document.getElementById('clientName').value;
             const email = document.getElementById('clientEmail').value || `cliente-${Date.now()}@cassia.com`;
             const clientId = 'client-' + Date.now() + '-' + Math.random().toString(36).substr(2, 9);
@@ -191,15 +190,3 @@
         }
 
         function copyClientLink(clientId) {
-            const link = `${BASE_URL}/cassia-app.html?token=${ACCESS_TOKEN}&client=${clientId}`;
-            navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado!'));
-        }
-
-        if (sessionStorage.getItem('admin_logged') === 'true') {
-            document.getElementById('loginScreen').classList.add('hidden');
-            document.getElementById('adminPanel').classList.remove('hidden');
-            loadClients();
-        }
-    </script>
-</body>
-</html>
