--- a/cass/admin.html
+++ b/cass/admin.html
@@ -48,118 +48,4 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
             <div class="glass rounded-xl p-6 text-center">
                 <div class="text-3xl mb-2">👥</div>
-                <div class="text-2xl font-bold gradient-text" id="totalClients">0</div>
-                <div class="text-sm text-gray-600">Total de Clientes</div>
-            </div>
-            <div class="glass rounded-xl p-6 text-center">
-                <div class="text-3xl mb-2">🔗</div>
-                <div class="text-2xl font-bold gradient-text" id="totalLinks">0</div>
-                <div class="text-sm text-gray-600">Links Gerados</div>
-            </div>
-            <div class="glass rounded-xl p-6 text-center">
-                <div class="text-3xl mb-2">⚡</div>
-                <div class="text-2xl font-bold text-green-600">Online</div>
-                <div class="text-sm text-gray-600">Status no GitHub</div>
-            </div>
-        </div>
-
-        <div class="glass rounded-2xl p-6">
-            <h2 class="text-2xl font-bold gradient-text mb-6">🔗 Gerar Novo Link de Cliente</h2>
-            <form onsubmit="event.preventDefault(); generateLink(); return false;" class="space-y-4">
-                <div>
-                    <label class="block text-sm font-semibold text-gray-700 mb-2">👤 Nome do Cliente</label>
-                    <input type="text" id="clientName" required placeholder="Ex: João Silva" class="w-full px-4 py-3 rounded-xl border-2 focus:border-purple-500 focus:outline-none">
-                </div>
-                <button type="submit" class="btn-primary w-full py-4 rounded-xl text-white font-semibold text-lg transition-all">✨ Gerar Link Único</button>
-            </form>
-
-            <div id="linkResult" class="hidden mt-8 p-6 bg-green-50 rounded-xl border-2 border-green-200">
-                <h3 class="text-xl font-bold text-green-800 mb-4">✅ Link Gerado com Sucesso!</h3>
-                <div class="bg-white rounded-lg p-4">
-                    <div class="flex gap-2">
-                        <input type="text" id="generatedLink" readonly class="flex-1 px-4 py-3 bg-gray-50 rounded-lg border text-sm font-mono">
-                        <button onclick="copyLink()" class="px-6 py-3 bg-green-600 text-white rounded-lg font-semibold">📋 Copiar</button>
-                    </div>
-                </div>
-            </div>
-
-            <div id="clientsList" class="mt-8">
-                <h3 class="text-xl font-bold gradient-text mb-4">👥 Lista de Acessos Ativos</h3>
-                <div id="clientsContainer" class="space-y-3"></div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const ADMIN_PASSWORD = 'admin2026';
-        const ACCESS_TOKEN = 'access-cassia-2026';
-        // CORREÇÃO: Linha única e correta para o GitHub
-        const BASE_URL = window.location.origin + '/meu-app/cass';
-
-        function login() {
-            const pass = document.getElementById('adminPass').value;
-            if (pass === ADMIN_PASSWORD) {
-                sessionStorage.setItem('admin_logged', 'true');
-                document.getElementById('loginScreen').classList.add('hidden');
-                document.getElementById('adminPanel').classList.remove('hidden');
-                loadClients();
-            } else {
-                alert('❌ Senha incorreta!');
-            }
-        }
-
-        function logout() {
-            sessionStorage.removeItem('admin_logged');
-            location.reload();
-        }
-
-        function generateLink() {
-            const name = document.getElementById('clientName').value;
-            const clientId = 'client-' + Date.now();
-            const client = { id: clientId, name: name, createdAt: new Date().toISOString() };
-
-            let clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
-            clients.push(client);
-            const BASE_URL = window.location.origin + '/meu-app/cass';
-
-            const link = `${BASE_URL}/cassia-app.html?token=${ACCESS_TOKEN}&client=${clientId}`;
-            document.getElementById('generatedLink').value = link;
-            document.getElementById('linkResult').classList.remove('hidden');
-            loadClients();
-        }
-
-        function copyLink() {
-            const link = document.getElementById('generatedLink').value;
-            navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado para o WhatsApp!'));
-        }
-
-        function loadClients() {
-            const clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
-            document.getElementById('totalClients').textContent = clients.length;
-            document.getElementById('totalLinks').textContent = clients.length;
-
-            const container = document.getElementById('clientsContainer');
-            container.innerHTML = clients.reverse().map(c => `
-                <div class="bg-white p-4 rounded-lg border shadow-sm flex justify-between items-center">
-                    <div>
-                        <p class="font-bold">${c.name}</p>
-                        <p class="text-xs text-gray-400">${new Date(c.createdAt).toLocaleString()}</p>
-                    </div>
-                    <button onclick="copyManualLink('${c.id}')" class="text-purple-600 font-semibold text-sm">Copiar Link</button>
-                </div>
-            `).join('');
-        }
-
-        function copyManualLink(id) {
-            const link = `${BASE_URL}/cassia-app.html?token=${ACCESS_TOKEN}&client=${id}`;
-            navigator.clipboard.writeText(link).then(() => alert('✅ Link do cliente copiado!'));
-        }
-
-        if (sessionStorage.getItem('admin_logged') === 'true') {
-            document.getElementById('loginScreen').classList.add('hidden');
-            document.getElementById('adminPanel').classList.remove('hidden');
-            loadClients();
-        }
-    </script>
-</body>
-</html>
+                <div class
