--- a/cass/admin.html
+++ b/cass/admin.html
@@ -35,17 +35,83 @@
     </div>
 
     <div id="adminPanel" class="hidden max-w-6xl mx-auto">
-        <div class="glass rounded-2xl p-6 mb-6">
-            <div class="flex justify-between items-center">
-                <div>
-                    <h1 class="text-3xl font-bold gradient-text">👑 Painel Administrativo</h1>
-                    <p class="text-gray-600 text-sm mt-1">Cassia Prompt - Gerenciamento</p>
-                </div>
-                <button onclick="logout()" class="px-6 py-3 bg-red-100 text-red-700 rounded-xl font-semibold hover:bg-red-200">🚪 Sair</button>
-            </div>
+        <div class="glass rounded-2xl p-6 mb-6 text-center">
+            <h1 class="text-3xl font-bold gradient-text">👑 Painel Administrativo</h1>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
-            <div class="glass rounded-xl p-6 text-center">
-                <div class="text-3xl mb-2">👥</div>
-                <div class
+        <div class="glass rounded-2xl p-6">
+            <h2 class="text-2xl font-bold gradient-text mb-6">🔗 Gerar Link de Cliente</h2>
+            <form onsubmit="event.preventDefault(); generateLink(); return false;" class="space-y-4">
+                <input type="text" id="clientName" required placeholder="Nome do Cliente" class="w-full px-4 py-3 rounded-xl border-2">
+                <button type="submit" class="btn-primary w-full py-4 rounded-xl text-white font-semibold">✨ Gerar Link</button>
+            </form>
+            <div id="linkResult" class="hidden mt-4 p-4 bg-green-50 rounded-xl border">
+                <input type="text" id="generatedLink" readonly class="w-full p-2 text-sm border mb-2">
+                <button onclick="copyLink()" class="w-full py-2 bg-green-600 text-white rounded">Copiar Link</button>
+            </div>
+            <div id="clientsList" class="mt-8">
+                <h3 class="font-bold mb-4">👥 Clientes:</h3>
+                <div id="clientsContainer" class="space-y-2"></div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const ADMIN_PASSWORD = 'admin2026';
+        const BASE_URL = window.location.origin + '/meu-app/cass';
+
+        function login() {
+            const pass = document.getElementById('adminPass').value;
+            if (pass === ADMIN_PASSWORD) {
+                sessionStorage.setItem('admin_logged', 'true');
+                document.getElementById('loginScreen').classList.add('hidden');
+                document.getElementById('adminPanel').classList.remove('hidden');
+                loadClients();
+            } else {
+                alert('❌ Senha incorreta!');
+            }
+        }
+
+        function generateLink() {
+            const name = document.getElementById('clientName').value;
+            const clientId = 'client-' + Date.now();
+            const client = { id: clientId, name: name, createdAt: new Date().toISOString() };
+            let clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
+            clients.push(client);
+            localStorage.setItem('cassia_clients', JSON.stringify(clients));
+            
+            const link = `${BASE_URL}/cassia-app.html?token=access-cassia-2026&client=${clientId}`;
+            document.getElementById('generatedLink').value = link;
+            document.getElementById('linkResult').classList.remove('hidden');
+            loadClients();
+        }
+
+        function copyLink() {
+            const link = document.getElementById('generatedLink').value;
+            navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado!'));
+        }
+
+        function loadClients() {
+            const clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
+            const container = document.getElementById('clientsContainer');
+            container.innerHTML = clients.reverse().map(c => `
+                <div class="p-3 bg-white border rounded shadow-sm flex justify-between">
+                    <span>${c.name}</span>
+                    <button onclick="copyManual('${c.id}')" class="text-purple-600 text-sm font-bold">Copiar</button>
+                </div>
+            `).join('');
+        }
+
+        function copyManual(id) {
+            const link = `${BASE_URL}/cassia-app.html?token=access-cassia-2026&client=${id}`;
+            navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado!'));
+        }
+
+        if (sessionStorage.getItem('admin_logged') === 'true') {
+            document.getElementById('loginScreen').classList.add('hidden');
+            document.getElementById('adminPanel').classList.remove('hidden');
+            loadClients();
+        }
+    </script>
+</body>
+</html>
