--- a/cass/admin.html
+++ b/cass/admin.html
@@ -35,26 +35,21 @@
     </div>
 
     <div id="adminPanel" class="hidden max-w-6xl mx-auto">
-        <div class="glass rounded-2xl p-6 mb-6">
-            <div class="flex justify-between items-center">
-                <h1 class="text-3xl font-bold gradient-text">👑 Painel Administrativo</h1>
-                <button onclick="logout()" class="px-6 py-3 bg-red-100 text-red-700 rounded-xl font-semibold">🚪 Sair</button>
-            </div>
+        <div class="glass rounded-2xl p-6 mb-6 flex justify-between items-center">
+            <h1 class="text-3xl font-bold gradient-text">👑 Painel Administrativo</h1>
+            <button onclick="location.reload()" class="px-4 py-2 bg-red-100 text-red-700 rounded-lg">Sair</button>
         </div>
 
         <div class="glass rounded-2xl p-6">
             <h2 class="text-2xl font-bold gradient-text mb-6">🔗 Gerar Link de Cliente</h2>
             <form onsubmit="event.preventDefault(); generateLink(); return false;" class="space-y-4">
-                <input type="text" id="clientName" required placeholder="Nome do Cliente" class="w-full px-4 py-3 rounded-xl border-2 focus:border-purple-500 focus:outline-none">
-                <button type="submit" class="btn-primary w-full py-4 rounded-xl text-white font-semibold text-lg transition-all">✨ Gerar Link</button>
+                <input type="text" id="clientName" required placeholder="Nome do Cliente" class="w-full px-4 py-3 rounded-xl border-2">
+                <button type="submit" class="btn-primary w-full py-4 rounded-xl text-white font-semibold">✨ Gerar Link</button>
             </form>
-            <div id="linkResult" class="hidden mt-8 p-6 bg-green-50 rounded-xl border-2 border-green-200">
-                <input type="text" id="generatedLink" readonly class="w-full px-4 py-3 bg-white rounded-lg border mb-4">
-                <button onclick="copyLink()" class="w-full py-3 bg-green-600 text-white rounded-lg font-semibold">📋 Copiar Link</button>
-            </div>
-            <div id="clientsList" class="mt-8">
-                <h3 class="text-xl font-bold gradient-text mb-4">👥 Clientes Cadastrados</h3>
-                <div id="clientsContainer" class="space-y-3"></div>
+            <div id="linkResult" class="hidden mt-6 p-4 bg-green-50 rounded-xl border border-green-200">
+                <p class="text-sm font-bold text-green-800 mb-2">✅ Link Gerado:</p>
+                <input type="text" id="generatedLink" readonly class="w-full p-2 border rounded mb-3">
+                <button onclick="copyLink()" class="w-full py-2 bg-green-600 text-white rounded-lg">Copiar Link</button>
             </div>
         </div>
     </div>
@@ -66,59 +61,23 @@
         function login() {
             const pass = document.getElementById('adminPass').value;
             if (pass === ADMIN_PASSWORD) {
-                sessionStorage.setItem('admin_logged', 'true');
                 document.getElementById('loginScreen').classList.add('hidden');
                 document.getElementById('adminPanel').classList.remove('hidden');
-                loadClients();
             } else {
                 alert('❌ Senha incorreta!');
             }
         }
 
-        function logout() {
-            sessionStorage.removeItem('admin_logged');
-            location.reload();
-        }
-
         function generateLink() {
             const name = document.getElementById('clientName').value;
-            const clientId = 'client-' + Date.now();
-            const client = { id: clientId, name: name, createdAt: new Date().toISOString() };
-            let clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
-            clients.push(client);
-            localStorage.setItem('cassia_clients', JSON.stringify(clients));
-            
-            const link = `${BASE_URL}/cassia-app.html?token=access-cassia-2026&client=${clientId}`;
+            const link = `${BASE_URL}/cassia-app.html?token=access-cassia-2026&client=${Date.now()}`;
             document.getElementById('generatedLink').value = link;
             document.getElementById('linkResult').classList.remove('hidden');
-            loadClients();
         }
 
         function copyLink() {
             const link = document.getElementById('generatedLink').value;
             navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado!'));
-        }
-
-        function loadClients() {
-            const clients = JSON.parse(localStorage.getItem('cassia_clients') || '[]');
-            const container = document.getElementById('clientsContainer');
-            container.innerHTML = clients.reverse().map(c => `
-                <div class="bg-white p-4 rounded-lg border flex justify-between items-center">
-                    <span>${c.name}</span>
-                    <button onclick="copyManual('${c.id}')" class="text-purple-600 font-bold">Copiar Link</button>
-                </div>
-            `).join('');
-        }
-
-        function copyManual(id) {
-            const link = `${BASE_URL}/cassia-app.html?token=access-cassia-2026&client=${id}`;
-            navigator.clipboard.writeText(link).then(() => alert('✅ Link copiado!'));
-        }
-
-        if (sessionStorage.getItem('admin_logged') === 'true') {
-            document.getElementById('loginScreen').classList.add('hidden');
-            document.getElementById('adminPanel').classList.remove('hidden');
-            loadClients();
         }
     </script>
 </body>
