--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -3,40 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Prompts Profissionais</title>
+    <title>Gerador de Ideias e Prompts</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-900 min-h-screen p-4 text-white font-sans">
     <div id="content" class="hidden max-w-2xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-purple-400">🚀 Fábrica de Prompts</h1>
-            <p class="text-slate-400">Preencha as lacunas para gerar seu comando profissional.</p>
+            <h1 class="text-3xl font-bold text-purple-400">🚀 Inteligência Criativa</h1>
+            <p class="text-slate-400">Personalize seu prompt profissional abaixo.</p>
         </header>
 
         <div class="bg-slate-800 p-6 rounded-2xl shadow-xl mb-6 border-l-4 border-blue-500">
-            <h2 class="text-xl font-bold mb-4 flex items-center">⚖️ Para Advogados</h2>
-            <p class="text-sm text-slate-400 mb-2">Qual o tema da petição ou tese?</p>
-            <input type="text" id="temaAdv" placeholder="Ex: Divórcio Litigioso, Revisional de Aluguel..." class="w-full p-3 rounded-xl bg-slate-700 border-none mb-4 text-white">
-            <button onclick="gerarAdv()" class="w-full bg-blue-600 hover:bg-blue-700 p-3 rounded-xl font-bold transition">Gerar Prompt Jurídico</button>
+            <h2 class="text-xl font-bold mb-4 italic">⚖️ Área Jurídica</h2>
+            <label class="text-sm text-slate-300">Sobre qual tema você precisa de uma tese?</label>
+            <input type="text" id="temaAdv" placeholder="Ex: Pensão Alimentícia, Danos Morais..." class="w-full p-3 rounded-xl bg-slate-700 border-none my-3 text-white focus:ring-2 focus:ring-blue-500">
+            <button onclick="gerar('adv')" class="w-full bg-blue-600 hover:bg-blue-700 p-3 rounded-xl font-bold transition">Refinar meu Prompt Jurídico</button>
         </div>
 
         <div class="bg-slate-800 p-6 rounded-2xl shadow-xl mb-6 border-l-4 border-green-500">
-            <h2 class="text-xl font-bold mb-4 flex items-center">🛍️ Para Lojistas</h2>
-            <p class="text-sm text-slate-400 mb-2">Qual produto você quer vender?</p>
-            <input type="text" id="prodLoj" placeholder="Ex: Sapato de Couro, Perfume Importado..." class="w-full p-3 rounded-xl bg-slate-700 border-none mb-4 text-white">
-            <button onclick="gerarLoj()" class="w-full bg-green-600 hover:bg-green-600 p-3 rounded-xl font-bold transition">Gerar Prompt de Vendas</button>
+            <h2 class="text-xl font-bold mb-4 italic">🛍️ Área Comercial</h2>
+            <label class="text-sm text-slate-300">Qual produto ou oferta quer destacar?</label>
+            <input type="text" id="temaLoj" placeholder="Ex: Queima de Estoque, Lançamento de Inverno..." class="w-full p-3 rounded-xl bg-slate-700 border-none my-3 text-white focus:ring-2 focus:ring-green-500">
+            <button onclick="gerar('loj')" class="w-full bg-green-600 hover:bg-green-700 p-3 rounded-xl font-bold transition">Criar Ideia de Venda</button>
         </div>
 
         <div id="resultadoArea" class="hidden bg-white text-slate-900 p-6 rounded-2xl shadow-2xl mt-8">
-            <p class="font-bold text-purple-700 mb-2">✅ Seu Prompt está pronto:</p>
-            <textarea id="promptFinal" readonly class="w-full h-40 p-3 border rounded-lg bg-slate-50 text-sm focus:outline-none"></textarea>
-            <button onclick="copyPrompt()" class="w-full mt-4 bg-slate-900 text-white p-3 rounded-xl font-bold italic">📋 Copiar para usar no ChatGPT</button>
+            <p class="font-bold text-purple-700 mb-2">✨ Seu comando personalizado:</p>
+            <textarea id="promptFinal" class="w-full h-48 p-3 border rounded-lg bg-slate-50 text-sm focus:ring-2 focus:ring-purple-500 text-slate-800 font-medium"></textarea>
+            <div class="flex gap-2 mt-4">
+                <button onclick="copyPrompt()" class="flex-1 bg-slate-900 text-white p-3 rounded-xl font-bold">📋 Copiar Prompt</button>
+            </div>
+            <p class="text-[10px] text-slate-400 mt-3 text-center">Cole este texto no ChatGPT ou Gemini para ver a mágica acontecer.</p>
         </div>
     </div>
 
     <div id="error" class="text-center mt-20">
-        <h1 class="text-2xl font-bold text-red-500">🚫 Acesso Restrito</h1>
-        <p class="mt-2 text-slate-400">Use o link enviado pela Cássia para acessar.</p>
+        <h1 class="text-2xl font-bold text-red-500">🚫 Acesso Não Autorizado</h1>
     </div>
 
     <script>
@@ -46,29 +48,25 @@
             document.getElementById('error').classList.add('hidden');
         }
 
-        function mostrar(txt) {
-            document.getElementById('promptFinal').value = txt;
+        function gerar(tipo) {
+            let prompt = "";
+            if(tipo === 'adv') {
+                const valor = document.getElementById('temaAdv').value || "Direito Civil";
+                prompt = `Atue como um Advogado Sênior. Elabore uma tese jurídica persuasiva sobre ${valor}. Foque em doutrina atualizada e sugira 3 tópicos principais para a petição inicial, garantindo um tom técnico e inquestionável.`;
+            } else {
+                const valor = document.getElementById('temaLoj').value || "meu novo produto";
+                prompt = `Atue como um Especialista em Marketing Digital. Crie uma estratégia de copy para vender ${valor}. O texto deve usar o método AIDA (Atenção, Interesse, Desejo e Ação) e incluir sugestões de 3 hashtags virais e uma ideia de Reels interativo.`;
+            }
+            document.getElementById('promptFinal').value = prompt;
             document.getElementById('resultadoArea').classList.remove('hidden');
             window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
-        }
-
-        function gerarAdv() {
-            const tema = document.getElementById('temaAdv').value || "[TEMA]";
-            const p = `Atue como um Advogado Especialista. Elabore uma fundamentação jurídica detalhada sobre ${tema}, citando a necessidade de base legal no Código Civil e jurisprudência recente. O tom deve ser formal e técnico.`;
-            mostrar(p);
-        }
-
-        function gerarLoj() {
-            const prod = document.getElementById('prodLoj').value || "[PRODUTO]";
-            const p = `Atue como um Copywriter de alto nível. Crie uma legenda persuasiva para o Instagram vendendo ${prod}. Use gatilhos mentais de escassez e exclusividade, termine com uma chamada para ação (CTA) para o link na bio.`;
-            mostrar(p);
         }
 
         function copyPrompt() {
             const copyText = document.getElementById("promptFinal");
             copyText.select();
             document.execCommand("copy");
-            alert("Prompt copiado com sucesso!");
+            alert("Copiado! Agora cole no seu assistente de IA.");
         }
     </script>
 </body>
